# src/routers/router/usersRouter.js
@@ -1,9 +1,8 @@
 import Router from '@koa/router'
 // 导入控制层（模块化结构）
 import User from '../../controllers/users/userController.js'
-import Order from '../../controllers/order/orderController.js'
 import { validateBody, validateQuery } from '../../middleware/validationMiddleware.js'
-// import authenticate from '../../middleware/autherticate.js'
+import authMiddleware from '../../middleware/autherticate.js'
 import { errorControllerWrapper } from '../../utils/errorHandler.js'
 import { LoginBodySchema, FindUserNameBodySchema, RegisterBodySchema } from '../../schemas/models/userEntitySchema.js'
 
@@ -14,10 +13,10 @@ usersRouter.post('/user/login', validateBody(LoginBodySchema), errorControllerWr
 usersRouter.post('/user/findUserName', validateBody(FindUserNameBodySchema), errorControllerWrapper(User.findUserName))
 usersRouter.post('/user/register', validateBody(RegisterBodySchema), errorControllerWrapper(User.register))
 
-usersRouter.post('/order/login', validateBody(RegisterBodySchema), errorControllerWrapper(Order.login))
 // 示例：需要登录态或 token 的路由
 usersRouter.get(
   '/user/test',
+  authMiddleware,
   validateQuery(LoginBodySchema),
   errorControllerWrapper((ctx) => {
     ctx.body = { ok: true, data: ctx.state.data }
